# flash-model-architectures

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  1b.yml  MANIFEST.in  Makefile  README.md  _sfdp_pattern_1.py  a.cu  a.py  b.py  copyright-exclude.txt  pattern_matcher.py  pyproject.toml  questions.txt  requirements.txt  setup.py
.github/workflows/: style.yml
cute_kernels/: __init__.py  cache.yml  constants.py  counter.py  counters.py  cpp_registry.yml  cute_inductor.py  inductor.py  jit.py  kernel_backend.py  math.py  tensor.py  torch_math.py  triton_math.py  triton_utils.py  types.py
cute_kernels/cute_inductor/: __init__.py  compiler.py  config.py  constants.py  pattern_matcher.py  rmsnorm.py  swiglu_packed.py
cute_kernels/cutotune/: __init__.py  cache.py  config.py  cutotune_cache.yml  tuner.py
cute_kernels/include/: activations.h  checks.h  cute_kernels.h  device.cuh  device.h  dispatch.h  dtypes.h  launch.h  math.h  memory.h  packing.cuh  packing.h  shared_memory.h  static.h  threads.h  timer.h
cute_kernels/kernels/: __init__.py  fused_linear_cross_entropy.py
cute_kernels/modules/: __init__.py  gru.py  rnn.py
cute_kernels/ops/: __init__.py  linear.py
cute_kernels/utils/: __init__.py  contiguous.py  custom_op.py  device.py  padding.py  ptx.py  random.py  tensor.py
docs/: Makefile  conf.py  index.rst
examples/: cute_inductor.py  inductor.py
fma/: __init__.py  accelerator.py  constants.py  counters.py  custom_op.py  enums.py  inductor.py  kernel_backend.py  math.py  torch_math.py  triton_math.py
fma/cutotune/: parameter.py  tuner.py
fma/functional/: __init__.py  fused_linear_cross_entropy.py  gemm.py  rmsnorm.py
fma/include/: activations.h  device.h  fma.h  launch.h  math.h  timer.h
fma/layers/: gru.py  rnn.py
fma/modules/: __init__.py  gru.py  rnn.py
fma/ops/: __init__.py  fused_linear_cross_entropy.py  gemm.py  p_norm.py  rmsnorm.py
fma/utils/: __init__.py  contiguous.py  cute_dsl.py  env.py  ptx.py  settings.py  tensor.py
source/: conf.py  index.rst
tests/: test_commons.py
tests/cute_inductor/: rmsnorm_test.py  (+1 more)
tools/: build_cutotune_cache.py  copyright.py  kernels.yml  populate_readme.py  throughput_add_tensor.py  throughput_bmm.py  throughput_gemm.py  throughput_linear.py  throughput_rmsnorm.py  throughput_rnn.py  throughput_sequence_packing.py  throughput_swiglu.py  throughput_swiglu_packed.py
xma/: __init__.py  accelerator.py  constants.py  custom_op.py  cute_dsl_math.py  enums.py  inductor.py  io.py  jit.py  kernel_backend.py  module.py  torch_utils.py  triton_math.py
(+643 files in other folders)
